[gd_scene load_steps=7 format=2]

[ext_resource path="res://river_tool/TerrainRiverTool.gd" type="Script" id=1]
[ext_resource path="res://river_tool/analysis_tool.gdshader" type="Shader" id=2]
[ext_resource path="res://river_tool/analysis_3_tool.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/layer_count = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/layer_count = null

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("AnalysisViewportContainer/Viewport")

[node name="TerrainRiverTool" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AnalysisViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="AnalysisViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="TextureRect" type="TextureRect" parent="AnalysisViewportContainer/Viewport"]
material = SubResource( 1 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Analysis2ViewportContainer" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Analysis2ViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="TextureRect" type="TextureRect" parent="Analysis2ViewportContainer/Viewport"]
material = SubResource( 3 )
texture = SubResource( 2 )
stretch_mode = 1

[node name="TerrainFilesDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
resizable = true
dialog_text = "Select a heightmap that has been sliced"
mode = 0
access = 1

[connection signal="file_selected" from="TerrainFilesDialog" to="." method="_on_TerrainFilesDialog_file_selected"]
